# mediabus

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Padding.md  README.md  cabal.project  default.nix  flake.nix  hackage-upload.sh  hie.yaml  mediabus.cabal  run_tests.sh  shell.nix  stack.yaml  stack.yaml.outoftheway
nix/: iohk.nix  nixpkgs.nix  pkgs.nix
specs/: FakePayload.hs
specs/Data/MediaBus/: ReorderSpec.hs  SampleSpec.hs  SequenceSpec.hs  StreamSegmentSpec.hs  StreamSpec.hs  TicksSpec.hs
specs/Data/MediaBus/Audio/: ResampleSpec.hs
specs/Data/MediaBus/Basics/: TicksSpec.hs
specs/Data/MediaBus/Conduit/: AggregateSpec.hs  FrameRingSpec.hs  ReorderSpec.hs  RingBufferSpec.hs  SegmentSpec.hs  SpecUtils.hs  StaticSegmentSpec.hs  StreamSpec.hs
specs/Data/MediaBus/Conduit/Audio/Raw/: ResampleSpec.hs
specs/Data/MediaBus/Media/: BufferSpec.hs  SyncStreamSpec.hs
specs/Data/MediaBus/Media/Audio/: RawSpec.hs
specs/Data/MediaBus/Media/Audio/Raw/: ResampleSpec.hs
specs/Data/MediaBus/Stream/: ReorderSpec.hs  SegmentSpec.hs
specs/Data/MediaBus/Stream/Audio/Raw/: ResampleSpec.hs
src/Data/: MediaBus.hs
src/Data/MediaBus/: AsyncConduit.hs  BlankMedia.hs  Clock.hs  Conduit.hs  DebugSink.hs  Discontinous.hs  InternalLogging.hs  Logging.hs  Media.hs  MediaData.hs  Monotone.hs  OrderedBy.hs  Payload.hs  Reorder.hs  Sample.hs  Segment.hs  Sequence.hs  Series.hs  SourceId.hs  Stream.hs  StreamSegment.hs  Ticks.hs  Transcoder.hs
src/Data/MediaBus/Audio/: Alaw.hs  Channels.hs  Raw.hs  Resample.hs
src/Data/MediaBus/Basics/: Clock.hs  LoggingExtra.hs  Monotone.hs  OrderedBy.hs  Sequence.hs  Series.hs  SourceId.hs  Ticks.hs  VectorExtra.hs
src/Data/MediaBus/Conduit/: Aggregate.hs  Async.hs  Discontinous.hs  FrameRing.hs  Logging.hs  Reorder.hs  RingBuffer.hs  Segment.hs  StaticSegment.hs  Stream.hs  SyncStream.hs  Timing.hs  Trace.hs  TypeAnnotations.hs
src/Data/MediaBus/Conduit/Audio/Raw/: Alaw.hs  DebugSink.hs  Resample.hs
src/Data/MediaBus/Media/: Audio.hs  Blank.hs  Buffer.hs  Channels.hs  Discontinous.hs  Media.hs  Reframe.hs  Samples.hs  Segment.hs  StaticSegment.hs  Stream.hs  SyncStream.hs
src/Data/MediaBus/Media/Audio/: Raw.hs
src/Data/MediaBus/Media/Audio/Raw/: Alaw.hs  DebugSink.hs  Mono.hs  Resample.hs  Signed16bit.hs  Stereo.hs
src/Data/MediaBus/Stream/: Async.hs  Discontinous.hs  Reorder.hs  Segment.hs  Timing.hs  Trace.hs  TypeAnnotations.hs
src/Data/MediaBus/Stream/Audio/Raw/: Alaw.hs  DebugSink.hs  Resample.hs
src/Data/MediaBus/Transport/: Udp.hs
