name:                mediabus
version:             0.3.0.0
synopsis:            Multimedia streaming on top of Conduit
description:         Please see README.md
homepage:            https://github.com/lindenbaum/mediabus
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016,2017 Sven Heyll, Lindenbaum GmbH
category:            Media
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Data.MediaBus
                     , Data.MediaBus.Basics.Clock
                     , Data.MediaBus.Basics.Monotone
                     , Data.MediaBus.Basics.OrderedBy
                     , Data.MediaBus.Basics.Sequence
                     , Data.MediaBus.Basics.Series
                     , Data.MediaBus.Basics.SourceId
                     , Data.MediaBus.Basics.Ticks
                     , Data.MediaBus.Conduit.Async
                     , Data.MediaBus.Conduit.Audio.Raw.Alaw
                     , Data.MediaBus.Conduit.Audio.Raw.DebugSink
                     , Data.MediaBus.Conduit.Audio.Raw.Resample
                     , Data.MediaBus.Conduit.Discontinous
                     , Data.MediaBus.Conduit.Reorder
                     , Data.MediaBus.Conduit.Segment
                     , Data.MediaBus.Conduit.Stream
                     , Data.MediaBus.Conduit.Timing
                     , Data.MediaBus.Conduit.Trace
                     , Data.MediaBus.Conduit.TypeAnnotations
                     , Data.MediaBus.Media.Audio
                     , Data.MediaBus.Media.Audio.Raw
                     , Data.MediaBus.Media.Audio.Raw.Alaw
                     , Data.MediaBus.Media.Audio.Raw.Mono
                     , Data.MediaBus.Media.Audio.Raw.Signed16bit
                     , Data.MediaBus.Media.Audio.Raw.Stereo
                     , Data.MediaBus.Media.Blank
                     , Data.MediaBus.Media.Buffer
                     , Data.MediaBus.Media.Channels
                     , Data.MediaBus.Media.Discontinous
                     , Data.MediaBus.Media.Media
                     , Data.MediaBus.Media.Samples
                     , Data.MediaBus.Media.Segment
                     , Data.MediaBus.Media.Stream
                     , Data.MediaBus.Transport.Udp
  default-language:    Haskell2010
  ghc-options:       -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind  -fprint-explicit-kinds
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.9 && < 5
                     , bytestring
                     , cereal
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , data-default
                     , deepseq
                     , lens
                     , lifted-async
                     , monad-control
                     , mtl
                     , network
                     , parallel
                     , primitive
                     , process
                     , random
                     , resourcet
                     , spool == 0.1
                     , stm
                     , streaming-commons
                     , tagged
                     , text
                     , time
                     , transformers
                     , vector

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             Spec.hs
  other-modules:       Data.MediaBus.Conduit.Audio.Raw.ResampleSpec
                     , Data.MediaBus.Media.BufferSpec
                     , Data.MediaBus.Conduit.SegmentSpec
                     , Data.MediaBus.Conduit.ReorderSpec
                     , Data.MediaBus.Conduit.StreamSpec
                     , Data.MediaBus.Basics.TicksSpec
  default-language:    Haskell2010
  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.9 && < 5
                     , binary
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , mediabus
                     , containers
                     , data-default
                     , deepseq
                     , hspec
                     , lens
                     , monad-control
                     , mtl
                     , singletons
                     , spool == 0.1
                     , stm
                     , tagged
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , type-spec
                     , vector
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
                     , Arrows
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  ghc-options:       -threaded
                     -rtsopts -with-rtsopts=-N
                     -j +RTS -A256m -n2m -RTS
                     -Wall
                     -O0
                     -fno-warn-unused-binds
                     -fno-warn-orphans
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fno-warn-type-defaults

source-repository head
  type:     git
  location: https://github.com/lindenbaum/mediabus
