cabal-version:       2.4
name:                mediabus
version:             0.5.0.1
synopsis:            Multimedia streaming on top of Conduit
description:         Please see README.md
homepage:            https://github.com/sheyll/mediabus
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@gmail.com
copyright:           2016-2021 Sven Heyll
category:            Media
build-type:          Simple
-- extra-source-files:

library
  hs-source-dirs:      src
  exposed-modules:
                       Data.MediaBus
                     , Data.MediaBus.Basics.Clock
                     , Data.MediaBus.Basics.LoggingExtra
                     , Data.MediaBus.Basics.Monotone
                     , Data.MediaBus.Basics.OrderedBy
                     , Data.MediaBus.Basics.Sequence
                     , Data.MediaBus.Basics.Series
                     , Data.MediaBus.Basics.SourceId
                     , Data.MediaBus.Basics.Ticks
                     , Data.MediaBus.Basics.VectorExtra
                     , Data.MediaBus.Conduit.Async
                     , Data.MediaBus.Conduit.Audio.Raw.Alaw
                     , Data.MediaBus.Conduit.Audio.Raw.DebugSink
                     , Data.MediaBus.Conduit.Audio.Raw.Resample
                     , Data.MediaBus.Conduit.Discontinous
                     , Data.MediaBus.Conduit.Reorder
                     , Data.MediaBus.Conduit.FrameRing
                     , Data.MediaBus.Conduit.Segment
                     , Data.MediaBus.Conduit.Stream
                     , Data.MediaBus.Conduit.SyncStream
                     , Data.MediaBus.Conduit.Trace
                     , Data.MediaBus.Conduit.TypeAnnotations
                     , Data.MediaBus.Media.Audio
                     , Data.MediaBus.Media.Audio.Raw
                     , Data.MediaBus.Media.Audio.Raw.Alaw
                     , Data.MediaBus.Media.Audio.Raw.Mono
                     , Data.MediaBus.Media.Audio.Raw.Signed16bit
                     , Data.MediaBus.Media.Audio.Raw.Stereo
                     , Data.MediaBus.Media.Blank
                     , Data.MediaBus.Media.Buffer
                     , Data.MediaBus.Media.Channels
                     , Data.MediaBus.Media.Discontinous
                     , Data.MediaBus.Media.Media
                     , Data.MediaBus.Media.Samples
                     , Data.MediaBus.Media.Segment
                     , Data.MediaBus.Media.Stream
                     , Data.MediaBus.Media.SyncStream
                     , Data.MediaBus.Transport.Udp
  default-language:    Haskell2010
  ghc-options:       -Wall -funbox-strict-fields -fno-warn-unused-do-bind  -fprint-explicit-kinds
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.12 && < 5
                     , bytestring
                     , bytestring-to-vector >= 0.3
                     , cereal
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , data-default
                     , deepseq
                     , lens
                     , monad-logger
                     , mtl
                     , network
                     , parallel
                     , primitive
                     , process
                     , random
                     , resourcet
                     , stm
                     , streaming-commons
                     , tagged
                     , text
                     , time
                     , transformers
                     , unliftio >= 0.2 && < 0.3
                     , vector < 13

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             Spec.hs
  other-modules:       Data.MediaBus.Basics.TicksSpec
                     , Data.MediaBus.Conduit.Audio.Raw.ResampleSpec
                     , Data.MediaBus.Conduit.ReorderSpec
                     , Data.MediaBus.Conduit.FrameRingSpec
                     , Data.MediaBus.Conduit.SegmentSpec
                     , Data.MediaBus.Conduit.SpecUtils
                     , Data.MediaBus.Conduit.StreamSpec
                     , Data.MediaBus.Media.Audio.RawSpec
                     , Data.MediaBus.Media.BufferSpec
                     , Data.MediaBus.Media.SyncStreamSpec
                     , FakePayload
  default-language:    Haskell2010

  -- HACK make cabal test work in nix-shell
  -- https://github.com/obsidiansystems/cardano-node/commit/1d500566fe628f9e603244b55c2c524965bd66ff
  -- build-tool-depends:  hspec-discover:hspec-discover
  -- END OF HACK

  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.12 && < 5
                     , binary
                     , bytestring
                     , bytestring-to-vector >= 0.3
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , mediabus
                     , containers
                     , data-default
                     , deepseq
                     , hspec
                     , lens
                     , mtl
                     , singletons
                     , stm
                     , tagged
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , type-spec
                     , unliftio >= 0.2 && < 0.3
                     , vector < 13

  default-extensions:  ApplicativeDo
                     , Arrows
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  ghc-options:       -threaded
                     -rtsopts -with-rtsopts=-N
                     -j +RTS -A256m -n2m -RTS
                     -Wall
                     -O0
                     -fno-warn-unused-binds
                     -fno-warn-orphans
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fno-warn-type-defaults

source-repository head
  type:     git
  location: https://github.com/lindenbaum/mediabus
